--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   django:
     build: .
     container_name: django
+    ports:
+      - "127.0.0.1:8888:8000"
     volumes:
       - .:/app:z
     environment:
